--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,13 +35,13 @@
 server.port=8082
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/onlinegrocery?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://grocery-db:3306/onlinegrocery?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -50,5 +50,3 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.transaction=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-
