--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,21 +32,36 @@
 #
 
 # Server configuration
-server.port=8082
+server.port=8084
 
-# Database configuration
-spring.datasource.url=jdbc:mysql://grocery-db:3306/onlinegrocery?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/onlinegrocery?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.jpa.show-sql=true
+spring.datasource.username=root
+spring.datasource.password=Karthik@1510
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
+
+
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
-
-# Logging configuration
 logging.level.org.springframework.transaction=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dineshkarthikalla@gmail.com
+spring.mail.password=wvqzhdayhgncqsql  
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
+
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
+
+
