--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,12 +32,12 @@
 #
 
 # Server configuration
-server.port=8084
+server.port=8082
 
 spring.datasource.url=jdbc:mysql://localhost:3306/onlinegrocery?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.jpa.show-sql=true
 spring.datasource.username=root
-spring.datasource.password=Karthik@1510
+spring.datasource.password=Bhanuvamsi2005
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
